Working on adding shapes and centering.

--- a/src/App.css
+++ b/src/App.css
@@ -56,4 +56,9 @@ ul {
   border-bottom: 1px solid #888;
 }
 
+.container {
+  max-width: 860px;
+  margin: 0 auto;
+}
+
 /* end of navigation styling */
