--- a/src/index.css
+++ b/src/index.css
@@ -26,3 +26,13 @@ code {
   justify-content: center;
 }
 
+
+.circle {
+  display: flex;
+  width: 100px;
+  height: 100px;
+  background-color: green;
+  border-radius: 50%;
+  align-items: center;
+  justify-content: center;
+}
